--- a/style.css
+++ b/style.css
@@ -38,3 +38,18 @@ body {
 .additional-info-item {
   margin: 20px;
 }
+
+.main {
+  max-width: 1200px;
+  margin: 0 auto; 
+}
+
+.point {
+  margin-left: 50px;
+  list-style: circle;
+}
+
+.exaple-code {
+  background: black;
+  color: white;
+}
